--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -128,15 +128,15 @@ To generate the plots above run the following code in R (be sure your workspace 
     long_f2 <- getData_Impacts(datIN = fish2_dat,
                     LM  = c("likelihood","magnitude"),
                     time_period  = c("2021 - 2040", "2041 - 2060", "2060 - 2100"),
-                    Sector  = "Fisheries",
+                    Sector  = c("Fisheries"),
                     lvls  = c("Low  - My opinion",
                               "Medium low - My opinion and some data",
                               "Medium - Some data and publications by others",
                               "Medium High - My own data, and publications by others",
                               "High - My own data and publications"),
-                    rmMeanScore = F, 
-                    splitIN = "\t",
-                    adjIN = 0)
+                    rmMeanScore = T, 
+                    splitIN = "Mean Score",
+                    adjIN = 1)
     
     
     # mitigation and adaptation
@@ -164,84 +164,37 @@ To generate the plots above run the following code in R (be sure your workspace 
     long_adapt <- rbind(long_adapt_aqua,long_adapt_fish)
     
     ## Feb 2022 - pick up here
-    long_mitigat2     <- getData_mitig(mitigat2_dat,adjIN = 4)
-      
+    long_mitigat2     <- getData_adapt(mitigat_dat,
+                                       lkupIN = mitigat_lkup,
+                                       LM  = c("likelihood","magnitude"),
+                                       lvls  = c("Low  - My opinion",
+                                                  "Medium low - My opinion and some data",
+                                                  "Medium - Some data and publications by others",
+                                                  "Medium High - My own data, and publications by others",
+                                                  "High - My own data and publications"),
+                                       adjIN = 4)
+    
+    # get summaries:
+    smry_f1i <- get_smry_impacts(dat = long_f,Sector2 = "Fisheries (1st delphi)", mult = 1.95)
+    smry_a1i <- get_smry_impacts(dat = long_a,Sector2 = "Aquaculture (1st delphi)", mult = 1.95)
+    smry_f2i <- get_smry_impacts(dat = long_f2,Sector2 = "Fisheries (2nd delphi)", mult = 1.95)
+    smry_a2i <- get_smry_impacts(dat = long_a2,Sector2 = "Aquaculture (2nd delphi)", mult = 1.95)
     
     
+    smry_i <- rbind(smry_f1i,smry_a1i,smry_f2i,smry_a2i)
    
-    
-    # summarize across participants:
-    dat <- long_f2
-    smry <- dat%>%group_by(Sector,Category,LM,time_period)%>%summarise(
-      mn = mean(value.x,na.rm=T),
-      sd = sd (value.x,na.rm=T),
-      n  = length(value.x),
-      median = median(value.x,na.rm=T),
-      mn_conf = mean(conf_n,na.rm=T),
-      sd_conf = sd(conf_n,na.rm=T),
-      median_conf = median(conf_n,na.rm=T))
-    
-    smry<-smry%>%mutate(se = sd/sqrt(n))
-    smry$LM <- factor(smry$LM)
-    
-    # split mag and likelihood into columns:
-    smry_w    <- tidyr::spread(smry%>%
-                                 select(Sector,time_period,Category,LM, mn), 
-                               key = LM, value = mn)
-    smry_wse    <- tidyr::spread(smry%>%
-                                 select(Sector,time_period,Category,LM, se), 
-                               key = LM, value = se)
-    smry_wse    <- smry_wse%>%rename(likelihoodSE=likelihood,magnitudeSE=magnitude)
-    smry_wsd    <- tidyr::spread(smry%>%
-                                 select(Sector,time_period,Category,LM, sd), 
-                               key = LM, value = sd)
-    smry_wsd    <- smry_wsd%>%rename(likelihoodSD=likelihood,magnitudeSD=magnitude)
-    smry_w <- merge(smry_w,smry_wse,
-                    by=c("Sector","time_period","Category"))
-    smry_w <- merge(smry_w,smry_wsd,
-                    by=c("Sector","time_period","Category"))
-    smry_conf <- tidyr::spread(smry%>%
-                                 select(Sector,time_period,Category,LM, mn_conf), 
-                               key = LM, value = mn_conf)
-    smry_conf$mnConf <- apply(smry_conf[,c("likelihood","magnitude")],1,mean)
-    
-    smry_w <- merge(smry_w, smry_conf%>%
-                      select(Sector,time_period,Category, mnConf),
-                    by=c("Sector","time_period","Category"))
-    smry_w$likelihoodCV <- 100*smry_w$likelihoodSD/smry_w$likelihood
-    smry_w$magnitudeCV  <- 100*smry_w$magnitudeSD/smry_w$magnitude
-    smry_w$Category <- gsub("Change in ", "", smry_w$Category)
-    smry_w$Category <- gsub("Changes in ", "", smry_w$Category)
-    smry_w$Category <- gsub("Changes to ", "", smry_w$Category)
-    smry_w$cat_wrap <- stringr::str_wrap(smry_w$Category, width=30)
-    
-    mult<-1.95
-    smry_w$ylower <- smry_w$likelihood-mult*smry_w$likelihoodSE
-    smry_w$yupper <- smry_w$likelihood+mult*smry_w$likelihoodSE
-    smry_w$xlower <- smry_w$magnitude-mult*smry_w$magnitudeSE
-    smry_w$xupper <- smry_w$magnitude+mult*smry_w$magnitudeSE
-  
-    
-    smry_w$confidence   <- smry_w$mnConf
-    smry_w$uncertainty  <- smry_w$mnConf^-1
-    smry_w$Sector       <- factor(smry_w$Sector)
-    aqua <- smry_w%>%filter(Sector=="aquaculture")
-    
-    fish <- smry_w%>%filter(focus=="fisheries")
-    
-    
   # now make some plots:
-    
+  
     #all points together
-   p <-  ggplot()+geom_point(data=smry_w,aes(x     = magnitude,
+   p <-  ggplot()+geom_point(data=smry_i,aes(x     = magnitude,
                                              y     = likelihood,
                                              color = confidence,
                                              shape = Sector))+
       scale_color_viridis_c()+
-      facet_grid(Sector~time_period)+theme_minimal()
+      facet_grid(time_period~Sector2)+theme_minimal()
      
     sclr <-.75
-    png("Figs/Fig1_all_byTimeFrame.png", 
+    png("Figs/Fig1_impacts.png", 
         width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
     print(p)
     dev.off()
