--- a/WKCLIMAD_getStarted.tex
+++ b/WKCLIMAD_getStarted.tex
@@ -343,6 +343,12 @@ workspace is within your local \texttt{WKCLIMAD} folder):
 \hypertarget{now-to-make-some-plots}{%
 \section{Now to make some plots:}\label{now-to-make-some-plots}}
 
+\begin{figure}
+\centering
+\includegraphics{Figs/Fig1_impacts.png}
+\caption{Results of both rounds of Delphi surveys.}
+\end{figure}
+
 \begin{Shaded}
 \begin{Highlighting}[]
   \CommentTok{\# now make some plots:}
