--- a/WKCLIMAD_readme.tex
+++ b/WKCLIMAD_readme.tex
@@ -45,6 +45,46 @@
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
 \usepackage[margin=1in]{geometry}
+\usepackage{color}
+\usepackage{fancyvrb}
+\newcommand{\VerbBar}{|}
+\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+% Add ',fontsize=\small' for more characters per line
+\usepackage{framed}
+\definecolor{shadecolor}{RGB}{248,248,248}
+\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \usepackage{graphicx}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -73,46 +113,6 @@
 \setcounter{tocdepth}{2}
 \tableofcontents
 }
-\begin{verbatim}
-## Warning: package 'visNetwork' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'networkD3' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'network' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'tidygraph' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'ggraph' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'viridis' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'gdtools' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'hrbrthemes' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'shinyjs' was built under R version 4.1.3
-\end{verbatim}
-
-\begin{verbatim}
-## Warning: package 'magick' was built under R version 4.1.3
-\end{verbatim}
-
 \hypertarget{wkclimad-overview}{%
 \section{1. WKCLIMAD Overview}\label{wkclimad-overview}}
 
@@ -130,6 +130,23 @@ here:\url{https://www.ices.dk/community/groups/Pages/WKCLIMAD.aspx}
 
 The interactive shiny() is downloadable by entering the following lines
 of code into R().
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\#\textquotesingle{}Run the WKCLIMAD results}
+\CommentTok{\#\textquotesingle{}}
+\CommentTok{\#\textquotesingle{}https://github.com/kholsman/WKCLIMAD}
+
+\NormalTok{missing }\OtherTok{\textless{}{-}} \FunctionTok{setdiff}\NormalTok{(}\StringTok{"shiny"}\NormalTok{, }\FunctionTok{installed.packages}\NormalTok{()[, }\DecValTok{1}\NormalTok{])}
+\ControlFlowTok{if}\NormalTok{ (}\FunctionTok{length}\NormalTok{(missing) }\SpecialCharTok{\textgreater{}} \DecValTok{0}\NormalTok{) }\FunctionTok{install.packages}\NormalTok{(missing)}
+
+\CommentTok{\# Load libraries:}
+\ControlFlowTok{for}\NormalTok{(lib }\ControlFlowTok{in} \FunctionTok{c}\NormalTok{(}\StringTok{"shiny"}\NormalTok{))}
+  \FunctionTok{suppressMessages}\NormalTok{(}\FunctionTok{eval}\NormalTok{(}\FunctionTok{parse}\NormalTok{(}\AttributeTok{text=}\FunctionTok{paste}\NormalTok{(}\StringTok{"library("}\NormalTok{,lib,}\StringTok{")"}\NormalTok{))))}
+
+\FunctionTok{runGitHub}\NormalTok{( }\StringTok{"WKCLIMAD"}\NormalTok{, }\StringTok{"kholsman"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
 
 \hypertarget{chord-diagram}{%
 \subsection{3. Chord Diagram}\label{chord-diagram}}
