--- a/WKCLIMAD_readme.tex
+++ b/WKCLIMAD_readme.tex
@@ -151,6 +151,12 @@ of code into R().
 \hypertarget{chord-diagram}{%
 \subsection{3. Chord Diagram}\label{chord-diagram}}
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{htmltools}\SpecialCharTok{::}\FunctionTok{includeHTML}\NormalTok{(}\StringTok{"Figs/ChordPlot.html"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
 \hypertarget{force-diagram}{%
 \subsection{4. Force Diagram}\label{force-diagram}}
 
